fix : typos and Formatting

--- a/16-Evaluations/14-LangSmith-Online-Evaluation.ipynb
+++ b/16-Evaluations/14-LangSmith-Online-Evaluation.ipynb
@@ -14,7 +14,7 @@
     "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/LangChain-OpenTutorial/LangChain-OpenTutorial/blob/main/01-Basic/07-LCEL-Interface.ipynb) [![Open in GitHub](https://img.shields.io/badge/Open%20in%20GitHub-181717?style=flat-square&logo=github&logoColor=white)](https://github.com/LangChain-OpenTutorial/LangChain-OpenTutorial/blob/main/01-Basic/07-LCEL-Interface.ipynb)\n",
     "\n",
     "## Overview\n",
-    "This module provides tools to evaluate and track the performance of language models using **LangSmith's** online evaluation capabilities.\n",
+    "This notebook provides tools to evaluate and track the performance of language models using **LangSmith's** online evaluation capabilities.\n",
     "\n",
     "\n",
     "By setting up chains and using custom configurations, users can assess model outputs, including **hallucination** detection and context recall, ensuring robust performance in various scenarios.\n",
@@ -144,9 +144,9 @@
    "source": [
     "## Build a Pipeline for Online Evaluations\n",
     "\n",
-    "The provided Python script defines a class `PDFRAG` and related functionality to set up a retriever-augmented generation (RAG) pipeline for online evaluation of language models.\n",
+    "The provided Python script defines a class `PDFRAG` and related functionality to set up a RAG(Retriever-Augmented Generation) pipeline for online evaluation of language models.\n",
     "\n",
-    "### Explain for 'PDFRAG'\n",
+    "### Explain for `PDFRAG`\n",
     "\n",
     "The `PDFRAG` class is a modular framework for:\n",
     "\n",
@@ -154,7 +154,7 @@
     "2. Document Splitting: Dividing the content into manageable chunks for processing.\n",
     "3. Vectorstore Creation: Converting chunks into vector representations using embeddings.\n",
     "4. Retriever Setup: Enabling retrieval of the most relevant chunks for a given query.\n",
-    "5. Chain Construction: Creating a question-answering (QA) chain with prompt templates."
+    "5. Chain Construction: Creating a QA(Question-Answering) chain with prompt templates."
    ]
   },
   {
@@ -242,7 +242,7 @@
    "source": [
     "## Set Up the RAG System with PDFRAG\n",
     "\n",
-    "The following code demonstrates how to instantiate and use the `PDFRAG` class to set up a retriever-augmented generation (RAG) pipeline using a specific PDF document and a GPT-based model."
+    "The following code demonstrates how to instantiate and use the `PDFRAG` class to set up a RAG(Retriever-Augmented Generation) pipeline using a specific PDF document and a GPT-based model."
    ]
   },
   {
@@ -272,7 +272,7 @@
    "source": [
     "## Create a Parallel Evaluation Runnable\n",
     "\n",
-    "The following code demonstrates how to create a `RunnableParallel` object to evaluate multiple aspects of the retriever-augmented generation (RAG) pipeline concurrently."
+    "The following code demonstrates how to create a `RunnableParallel` object to evaluate multiple aspects of the RAG(Retriever-Augmented Generation) pipeline concurrently."
    ]
   },
   {
@@ -307,6 +307,7 @@
    "metadata": {},
    "source": [
     "## Make Online LLM-as-judge\n",
+    "\n",
     "\n",
     "### 1. click Add Rule\n",
     "\n",
@@ -373,7 +374,7 @@
    "source": [
     "## Run Evaluations\n",
     "\n",
-    "The following code demonstrates how to perform evaluations on the retriever-augmented generation (RAG) pipeline, including **hallucination** detection, context recall assessment, and combined evaluations."
+    "The following code demonstrates how to perform evaluations on the RAG(Retriever-Augmented Generation) pipeline, including **hallucination** detection, context recall assessment, and combined evaluations."
    ]
   },
   {
