Convert image format to Markdown

--- a/10-Retriever/01-VectorStoreRetriever.ipynb
+++ b/10-Retriever/01-VectorStoreRetriever.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "\n",
     "### RAG (Retrieval-Augmented Generation) Workflow\n",
-    "<img src=\"./assets/01-vectorstore-retriever-rag-flow.png\" alt=\"rag-flow\" width=\"1000\">\n",
+    "![rag-flow.png](./assets/01-vectorstore-retriever-rag-flow.png)\n",
     "\n",
     "The diagram above illustrates the  **document search and response generation** workflow within a RAG system. \n",
     "\n",
