[Proofread] LangGraph-Cloud
1. backtick -> bold
2. add comment to codes
3. proofread

--- a/17-LangGraph/03-Use-Cases/12-LangGraph-Cloud.ipynb
+++ b/17-LangGraph/03-Use-Cases/12-LangGraph-Cloud.ipynb
@@ -27,7 +27,7 @@
         "- Setting up **LangGraph Cloud**: How to create an account, configure your workspace, and deploy your first workflow.\n",
         "- Deploying workflows: Deploying workflows using LangGraph Cloud.\n",
         "- Using **LangGraph Studio**: How to connect to the Web UI **LangGraph Studio** and test the assistant.\n",
-        "- Testing the API: How to use send messages to the assistant using the **Python SDK** and verify the message data using **Rest API**.\n",
+        "- Testing the API: How to send messages to the assistant using the **Python SDK** and verify the message data using **Rest API**.\n",
         "\n",
         "By the end of this tutorial, you will be equipped with the knowledge to effectively utilize **LangGraph Cloud** for building and managing AI workflows in a scalable and efficient manner.\n",
         "\n",
@@ -102,20 +102,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "70361e4a",
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
-            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Install required packages\n",
         "from langchain_opentutorial import package\n",
@@ -185,8 +175,8 @@
         "    \n",
         "    * Select **Github react-agent** repository from the drop-down menu.\n",
         "    * Write the deployment name in **Name** field.\n",
-        "    * Select Git branch. `main` is default.\n",
-        "    * Langgraph config file is `langgraph.json` as default. You can also select another file.\n",
+        "    * Select Git branch. **main** is default.\n",
+        "    * Langgraph config file is **langgraph.json** as default. You can also select another file.\n",
         "    * Select **Development type**.\n",
         "    * Write **Environment Variables**. In this tutorial, we will use **ANTHROPIC_API_KEY** and **TAVILY_API_KEY**.\n",
         "    * Click **Submit** button at the upper right corner. It takes a few minutes to build the application.\n",
@@ -276,28 +266,30 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'run_id': '1efe8c75-cc83-66cc-bb41-72f4bb90104f', 'attempt': 1}\n",
-            "{'call_model': {'messages': [{'content': 'To say \"hello\" in French, you would use the word \"Bonjour.\" This is a common greeting used in French-speaking countries and is suitable for most situations, both formal and informal.\\n\\nHere\\'s a quick breakdown:\\n\\n- \"Bonjour\" (bohn-zhoor) - This means \"hello\" or \"good day\" and is the most common greeting in French.\\n\\nThere are also other French greetings you might find useful:\\n\\n1. \"Salut\" (sah-lew) - A more casual way to say \"hi\" or \"hey,\" used among friends or in informal situations.\\n2. \"Bonsoir\" (bohn-swahr) - Means \"good evening\" and is used in the evening or at night.\\n3. \"Allô\" (ah-loh) - Used when answering the phone, similar to \"hello\" in English.\\n\\nRemember, French pronunciation can be tricky for English speakers, so it\\'s always good to listen to native speakers or use language learning resources to perfect your pronunciation.\\n\\nIs there anything else you\\'d like to know about French greetings or language?', 'additional_kwargs': {}, 'response_metadata': {'id': 'msg_01MQRSCEgAUqFn3sW6cyrwiE', 'model': 'claude-3-5-sonnet-20240620', 'stop_reason': 'end_turn', 'stop_sequence': None, 'usage': {'cache_creation_input_tokens': 0, 'cache_read_input_tokens': 0, 'input_tokens': 430, 'output_tokens': 252}}, 'type': 'ai', 'name': None, 'id': 'run-465b6edb-04d5-4a0d-a191-19292b4bcee5-0', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 430, 'output_tokens': 252, 'total_tokens': 682, 'input_token_details': {'cache_read': 0, 'cache_creation': 0}}}]}}\n"
+            "{'run_id': '1efef2b1-a250-6226-a457-8760b437980b', 'attempt': 1}\n",
+            "{'call_model': {'messages': [{'content': 'To say \"hello\" in French, you don\\'t need any special tools or searches. The French word for \"hello\" is:\\n\\n\"Bonjour\"\\n\\nThis is the most common and formal way to say hello in French. It literally translates to \"good day\" and can be used at any time of day.\\n\\nThere are also other ways to greet someone in French, depending on the time of day or the level of formality:\\n\\n1. \"Salut\" - A more casual way to say \"hi\" or \"hey\"\\n2. \"Bonsoir\" - Used in the evening, meaning \"good evening\"\\n3. \"Coucou\" - Very informal, similar to \"hey there\" or \"hi there\"\\n\\nIs there anything else you\\'d like to know about French greetings or language?', 'additional_kwargs': {}, 'response_metadata': {'id': 'msg_01L2AGDYYLD8ADWyuAonxk55', 'model': 'claude-3-5-sonnet-20240620', 'stop_reason': 'end_turn', 'stop_sequence': None, 'usage': {'cache_creation_input_tokens': 0, 'cache_read_input_tokens': 0, 'input_tokens': 430, 'output_tokens': 181}}, 'type': 'ai', 'name': None, 'id': 'run-885a1808-0a9a-4763-a761-91972062d8c6-0', 'example': False, 'tool_calls': [], 'invalid_tool_calls': [], 'usage_metadata': {'input_tokens': 430, 'output_tokens': 181, 'total_tokens': 611, 'input_token_details': {'cache_read': 0, 'cache_creation': 0}}}]}}\n"
           ]
         }
       ],
       "source": [
         "from langgraph_sdk import get_client\n",
         "\n",
+        "# Initialize the LangGraph client with the endpoint URL and API key\n",
         "client = get_client(url=\"{your_endpoint_url}\", api_key=\"{your_langsmith_key}\")\n",
         "\n",
+        "# Stream the response from the LangGraph assistant\n",
         "async for chunk in client.runs.stream(\n",
-        "    None,  # Threadless run\n",
-        "    \"agent\", # Name of assistant. Defined in langgraph.json.\n",
+        "    None,       # Run without a specific thread (threadless run)\n",
+        "    \"agent\",    # Name of assistant. Defined in langgraph.json.\n",
         "    input={\n",
         "        \"messages\": [{\n",
-        "            \"role\": \"human\",\n",
-        "            \"content\": \"say hello in french\",\n",
+        "            \"role\": \"human\",    # User's role in the conversation\n",
+        "            \"content\": \"say hello in french\",   # User's input message\n",
         "        }],\n",
         "    },\n",
-        "    stream_mode=\"updates\",\n",
+        "    stream_mode=\"updates\",  # Stream mode to receive updates in real-time\n",
         "):\n",
-        "    print(chunk.data)"
+        "    print(chunk.data)   # Print the streamed data (assistant's response)"
       ]
     },
     {
