[E-1] 12-RAG / 10-Multi_modal_RAG-GPT-4o

--- a/12-RAG/10-Multi_modal_RAG-GPT-4o.ipynb
+++ b/12-RAG/10-Multi_modal_RAG-GPT-4o.ipynb
@@ -21,23 +21,23 @@
         "\n",
         "However, in most RAG applications, the information contained in images is lost.\n",
         "\n",
-        "With the advent of multimodal LLMs like GPT-4V and GPT4o, it is worth considering how to utilize images in RAG:\n",
+        "With the advent of multimodal LLMs like GPT-4V and GPT-4o, it is worth considering how to utilize images in RAG:\n",
         "\n",
-        "`Option 1:`\n",
+        "**Option 1:**\n",
         "\n",
         "- Use multimodal embedding (such as [CLIP](https://openai.com/research/clip)) to embed images and text.\n",
         "- Search for both using similarity search.\n",
         "- Pass the original image and text fragments to the multimodal LLM to synthesize the answers.\n",
         "\n",
-        "`Option 2:`\n",
+        "**Option 2:**\n",
         "\n",
-        "- Generate text summaries from images using multimodal LLMs (e.g. GPT-4V, GPT4o, [LLaVA](https://llava-vl.github.io/), [FUYU-8b](https://www.adept.ai/blog/fuyu-8b)).\n",
+        "- Generate text summaries from images using multimodal LLMs (e.g. GPT-4V, GPT-4o, [LLaVA](https://llava-vl.github.io/), [FUYU-8b](https://www.adept.ai/blog/fuyu-8b)).\n",
         "- Embed and search for text.\n",
         "- Pass text fragments to LLMs to synthesize answers.\n",
         "\n",
-        "`Option 3:`\n",
+        "**Option 3:**\n",
         "\n",
-        "- Generate text summaries from images using multimodal LLMs (e.g. GPT-4V, GPT4o, [LLaVA](https://llava-vl.github.io/), [FUYU-8b](https://www.adept.ai/blog/fuyu-8b)).\n",
+        "- Generate text summaries from images using multimodal LLMs (e.g. GPT-4V, GPT-4o, [LLaVA](https://llava-vl.github.io/), [FUYU-8b](https://www.adept.ai/blog/fuyu-8b)).\n",
         "- Embed and retrieve the image summary with a reference to the original image.\n",
         "- Pass the original image and text fragment to a multimodal LLM to synthesize answers.\n",
         "\n",
@@ -200,7 +200,7 @@
         "\n",
         "To use `unstructured`, the system requires `poppler` ([Installation Guide](https://pdf2image.readthedocs.io/en/latest/installation.html)) and `tesseract` ([Installation Guide](https://tesseract-ocr.github.io/tessdoc/Installation.html)).\n",
         "\n",
-        "**[Note]** `Option 2` is suitable when multimodal LLMs cannot be used for answer synthesis (e.g., due to cost or other limitations).\n"
+        "**[Note]** **Option 2** is suitable when multimodal LLMs cannot be used for answer synthesis (e.g., due to cost or other limitations).\n"
       ]
     },
     {
@@ -211,6 +211,8 @@
       },
       "source": [
         "## Data Loading\n",
+        "\n",
+        "Before processing PDFs, it's essential to distinguish between text and images for accurate extraction.\n",
         "\n",
         "### Splitting PDF Text and Images\n",
         "\n",
@@ -253,8 +255,6 @@
         "from unstructured.partition.pdf import partition_pdf\n",
         "\n",
         "# Extracting Elements from a PDF\n",
-        "\n",
-        "\n",
         "def extract_pdf_elements(path, fname):\n",
         "    \"\"\"\n",
         "    Extract images, tables, and text snippets from a PDF file.\n",
@@ -274,8 +274,6 @@
         "\n",
         "\n",
         "# Categorize elements by type\n",
-        "\n",
-        "\n",
         "def categorize_elements(raw_pdf_elements):\n",
         "    \"\"\"\n",
         "    Categorize elements extracted from a PDF into tables and text.\n",
@@ -341,7 +339,7 @@
       "source": [
         "## Multi-Vector Search Engine\n",
         "\n",
-        "Using the [multi-vector-retriever](https://python.langchain.com/docs/modules/data_connection/retrievers/multi_vector#summary), you can index summaries of images (and/or text, tables) while retrieving the original images (along with the original text or tables).\n",
+        "Using the [multi-vector-retriever](https://python.langchain.com/docs/how_to/multi_vector/), you can index summaries of images (and/or text, tables) while retrieving the original images (along with the original text or tables).\n",
         "\n",
         "### Text and Table Summarization\n",
         "\n",
@@ -366,8 +364,6 @@
         "from langchain_openai import ChatOpenAI\n",
         "\n",
         "# Create a summary of a text element\n",
-        "\n",
-        "\n",
         "def generate_text_summaries(texts, tables, summarize_texts=False):\n",
         "    \"\"\"\n",
         "    Text element summary\n",
@@ -532,7 +528,7 @@
       "source": [
         "### Adding to the Vector Store\n",
         "\n",
-        "To add the original documents and their summaries to the [Multi Vector Retriever](https://python.langchain.com/docs/modules/data_connection/retrievers/multi_vector#summary):\n",
+        "To add the original documents and their summaries to the [Multi Vector Retriever](https://python.langchain.com/docs/how_to/multi_vector/):\n",
         "\n",
         "- Store the original text, tables, and images in the `docstore`.\n",
         "- Save text summaries, table summaries, and image summaries in the `vectorstore` for efficient semantic search.\n"
@@ -661,9 +657,11 @@
       "source": [
         "## RAG\n",
         "\n",
+        "Effectively retrieving relevant documents is a crucial step in enhancing response accuracy.\n",
+        "\n",
         "### Building the Retriever\n",
         "\n",
-        "The retrieved documents must be assigned to the correct sections of the GPT-4o prompt template.\n"
+        "The retrieved documents must be assigned to the correct sections of the `GPT-4o` prompt template.\n"
       ]
     },
     {
