0222 - 16-Evaluations / 12-LangSmith-Pairwise-Evaluation 수정

--- a/16-Evaluations/12-LangSmith-Pairwise-Evaluation.ipynb
+++ b/16-Evaluations/12-LangSmith-Pairwise-Evaluation.ipynb
@@ -15,7 +15,7 @@
         "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/LangChain-OpenTutorial/LangChain-OpenTutorial/blob/main/99-TEMPLATE/00-BASE-TEMPLATE-EXAMPLE.ipynb) [![Open in GitHub](https://img.shields.io/badge/Open%20in%20GitHub-181717?style=flat-square&logo=github&logoColor=white)](https://github.com/LangChain-OpenTutorial/LangChain-OpenTutorial/blob/main/99-TEMPLATE/00-BASE-TEMPLATE-EXAMPLE.ipynb)\n",
         "\n",
         "## Overview\n",
-        "In some evaluations, the goal is to compare the outputs of two or more LLMs.\n",
+        "You can also evaluate the responses of LLM models by comparing them with each other. Using pairwise preference scoring, you can generate more reliable feedback.\n",
         "\n",
         "This comparative evaluation method is commonly encountered on platforms like [Chatbot Arena](https://lmsys.org/blog/2023-05-03-arena/) or LLM leaderboards.\n",
         "\n",
@@ -108,7 +108,7 @@
         "            \"LANGCHAIN_API_KEY\": \"\",\n",
         "            \"LANGCHAIN_TRACING_V2\": \"true\",\n",
         "            \"LANGCHAIN_ENDPOINT\": \"https://api.smith.langchain.com\",\n",
-        "            \"LANGCHAIN_PROJECT\": \"\",  # set the project name same as the title\n",
+        "            \"LANGCHAIN_PROJECT\": \"12-LangSmith-Pairwise-Evaluation\",\n",
         "        }\n",
         "    )"
       ]
@@ -119,6 +119,18 @@
       "metadata": {},
       "source": [
         "## Pairwise Evaluation\n",
+        "\n",
+        "Prepare two answers generated from the LLM in advance.\n",
+        "\n",
+        "Provide these two answers to the LLM and have it select the better answer using the following prompt:\n",
+        "\n",
+        "\"You are an LLM judge. Compare the following two answers to a question and determine which one is better.\n",
+        "Better answer is the one that is more detailed and informative.\n",
+        "If the answer is not related to the question, it is not a good answer.\"\n",
+        "\n",
+        "Configure the system so that the judged result can be uploaded to and verified on langsmith.\n",
+        "\n",
+        "Let's define a function.\n",
         "\n",
         "Now, you can generate a dataset from these example executions.\n",
         "\n",
@@ -273,7 +285,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "langchain-kr-lwwSZlnu-py3.11",
+      "display_name": "langchainopentutorial",
       "language": "python",
       "name": "python3"
     },
