typo : 번호 밑에 설명 추가

--- a/16-Evaluations/14-LangSmith-Online-Evaluation.ipynb
+++ b/16-Evaluations/14-LangSmith-Online-Evaluation.ipynb
@@ -310,35 +310,58 @@
     "\n",
     "\n",
     "### 1. click Add Rule\n",
+    "Click “Add Rule” to create a new evaluation rule in your LangSmith project.\n",
+    "\n",
     "\n",
     "![make-online-LLM-as-judge](./assets/14-LangSmith-Online-Evaluation-01.png)\n",
     "\n",
     "### 2. Create Evaluator\n",
+    "Open the Evaluator creation page to define how your outputs will be judged.\n",
+    "\n",
+    "\n",
     "![create-evaluator](./assets/14-LangSmith-Online-Evaluation-02.png)\n",
     "\n",
     "\n",
     "### 3. Set Secrets & API Keys\n",
+    "Provide the necessary API keys and environment secrets for your LLM provider.\n",
+    "\n",
+    "\n",
     "![set-secrets-API-keys](./assets/14-LangSmith-Online-Evaluation-03.png)\n",
     "![set-API-Keys](./assets/14-LangSmith-Online-Evaluation-04.png)\n",
     "\n",
     "\n",
     "### 4. Set Provider, Model, Prompt\n",
+    "Choose the LLM provider, select a model, and write the prompt you want to use.\n",
+    "\n",
+    "\n",
     "![set-provider-model-prompt](./assets/14-LangSmith-Online-Evaluation-05.png)\n",
     "\n",
     "\n",
     "### 5. Select Halluciantion\n",
+    "Pick the “Hallucination” criteria to evaluate factual accuracy in responses.\n",
+    "\n",
+    "\n",
     "![select-hallucination](./assets/14-LangSmith-Online-Evaluation-06.png)\n",
     "\n",
     "\n",
     "\n",
     "### 6. Set facts for output.context\n",
+    "Enter the factual information in “output.context” so the evaluator can reference it.\n",
+    "\n",
+    "\n",
     "![set-facts](./assets/14-LangSmith-Online-Evaluation-07.png)\n",
     "\n",
     "### 7. Set answer for output.answer\n",
+    "Specify the expected answer in “output.answer” for comparison.\n",
+    "\n",
+    "\n",
     "![set-answer](./assets/14-LangSmith-Online-Evaluation-08.png)\n",
     "\n",
     "\n",
     "### 8. Check Preview for Data\n",
+    "Review your evaluation data in the Preview tab to confirm correctness.\n",
+    "\n",
+    "\n",
     "![check-preview](./assets/14-LangSmith-Online-Evaluation-09.png)\n",
     "\n",
     "\n",
@@ -351,10 +374,15 @@
     "![fill-evaluator](./assets/14-LangSmith-Online-Evaluation-13.png)\n",
     "\n",
     "### 9. Save and Continue\n",
+    "Save your evaluator and click “Continue” to finalize the configuration.\n",
+    "\n",
+    "\n",
     "![save](./assets/14-LangSmith-Online-Evaluation-11.png)\\\n",
     "![check-for-save](./assets/14-LangSmith-Online-Evaluation-14.png)\n",
     "\n",
     "### 10. Make \"Tag\"\n",
+    "Create a tag so you can selectively run evaluations on particular outputs.\n",
+    "\n",
     "\n",
     "![make-tag](./assets/14-LangSmith-Online-Evaluation-15.png)\n",
     "\n",
@@ -362,9 +390,14 @@
     "\n",
     "\n",
     "### 11. Set \"Tag\" that you want\n",
+    "Choose the tag you wish to use for targeted evaluations.\n",
+    "\n",
+    "\n",
     "![set-tag](./assets/14-LangSmith-Online-Evaluation-16.png)\n",
     "\n",
     "### 12. Run evaluations only for specific tags (hallucination)\n",
+    "Trigger the evaluation process exclusively for outputs labeled with your chosen tag.\n",
+    "\n",
     "![run-eval](./assets/14-LangSmith-Online-Evaluation-17.png)"
    ]
   },
