--- a/03-OutputParser/01-PydanticOutputParser.ipynb
+++ b/03-OutputParser/01-PydanticOutputParser.ipynb
@@ -21,33 +21,36 @@
     "## Overview\n",
     "\n",
     "\n",
-    "This tutorial covers how to perform `PydanticOutputParser` using `pydantic`.\n",
+    "This tutorial covers how to perform ```PydanticOutputParser``` using ```pydantic```.\n",
     "\n",
-    "The `PydanticOutputParser` is a class that helps transform the output of a language model into **structured information**. This class can **provide the information you need in a clear and organized form** instead of a simple text response.\n",
-    "\n",
-    "By utilizing this class, you transform the output of your language model to fit a specific data model, making it easier to process and utilize the information.\n",
-    "\n",
-    "## Main Method\n",
-    "\n",
-    "A `PydanticOutputParser` primarily requires the implementation of **two core methods**.\n",
+    "The ```PydanticOutputParser``` is a class that helps transform the output of a language model into **structured information** . This class can **provide the information you need in a clear and organized form** instead of a simple text response.\n",
     "\n",
     "\n",
-    "1. **`get_format_instructions()`**: Provide instructions that define the format of the information that the language model should output. \n",
+    "By utilizing this class, you can transform the output of your language model to fit a specific data model, making it easier to process and utilize the information\n",
+    "\n",
+    "### Main Method\n",
+    "\n",
+    "A ```PydanticOutputParser``` primarily requires the implementation of **two core methods**.\n",
+    "\n",
+    "\n",
+    "1. **```get_format_instructions()```**: Provide instructions that define the format of the information that the language model should output. \n",
     "For example, you can return instructions as a string that describes the fields of data that the language model should output and how they should be formatted. \n",
     "These instructions are very important for the language model to structure the output and transform it to fit your specific data model.\n",
     "\n",
-    "2. **`parse()`**: Takes the output of the language model (assumed to be a string) and analyzes and transforms it into a specific structure. \n",
+    "2. **```parse()```**: Takes the output of the language model (assumed to be a string) and analyzes and transforms it into a specific structure. \n",
     "Use a tool like Pydantic to validate the input string against a predefined schema and transform it into a data structure that follows that schema.\n",
     "\n",
     "\n",
     "### Table of Contents\n",
     "- [Overview](#overview)\n",
     "- [Environment Setup](#environment-setup)\n",
-    "- [PydanticOutputParser](#Use_PydanticOutputParser)\n",
+    "- [A Chain with the Basic StrOutputParser](#a-chain-with-the-basic-stroutputparser)\n",
+    "- [Using the PydanticOutputParser](#using-the-pydanticoutputparser)\n",
     "\n",
     "### References\n",
     "\n",
-    "- [Pydantic Official Document](https://docs.pydantic.dev/latest/)\n"
+    "- [Pydantic Official Document](https://docs.pydantic.dev/latest/)\n",
+    "---\n"
    ]
   },
   {
@@ -59,8 +62,8 @@
     "Set up the environment. You may refer to [Environment Setup](https://wikidocs.net/257836) for more details.\n",
     "\n",
     "**[Note]**\n",
-    "- `langchain-opentutorial` is a package that provides a set of easy-to-use environment setups, useful functions, and utilities for tutorials. \n",
-    "- You can check out the [`langchain-opentutorial`](https://github.com/LangChain-OpenTutorial/langchain-opentutorial-pypi) for more details."
+    "- ```langchain-opentutorial``` is a package that provides a set of easy-to-use environment setups, useful functions, and utilities for tutorials. \n",
+    "- You can check out the [```langchain-opentutorial```](https://github.com/LangChain-OpenTutorial/langchain-opentutorial-pypi) for more details."
    ]
   },
   {
@@ -129,7 +132,7 @@
    "metadata": {},
    "source": [
     "Environment variables have been set successfully.\n",
-    "You can alternatively set API keys, such as `OPENAI_API_KEY` in a `.env` file and load them.\n",
+    "You can alternatively set API keys, such as ```OPENAI_API_KEY``` in a ```.env``` file and load them.\n",
     "\n",
     "[Note] This is not necessary if you've already set the required API keys in previous steps."
    ]
@@ -159,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Required Library Import\n",
+    "# Import the required libraries\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.output_parsers import PydanticOutputParser\n",
     "from pydantic import BaseModel, Field\n",
@@ -176,7 +179,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below is an example of an email conversation stored in the variable `email_conversation` .\n"
+    "Below is an example of an email conversation stored in the variable ```email_conversation``` .\n",
+    "\n"
    ]
   },
   {
@@ -210,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example of not using an output parser(PydanticOutputParser)."
+    "Let's create a chain that utilizes the basic ```StrOutputParser```."
    ]
   },
   {
@@ -355,15 +359,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use_PydanticOutputParser\n",
-    "When provided with email content like the one above, we will parse the email information using the class defined in the `Pydantic` style below.\n",
+    "## Using the ```PydanticOutputParser```\n",
+    "When provided with email content like the one above, we can parse the email information using the class defined in the ```Pydantic``` style below.\n",
     "\n",
-    "For reference, the `description` inside the `Field` serves as guidance for extracting key information from text-based responses. LLMs rely on this description to extract the required information. Therefore, it is crucial that this description is accurate and clear."
+    "For reference, the ```description``` inside the ```Field``` serves as guidance for extracting key information from text-based responses. LLMs rely on this description to extract the required information. Therefore, it is crucial that this description is accurate and clear."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,13 +381,13 @@
     "    )\n",
     "\n",
     "\n",
-    "# Create PydanticOutputParser\n",
+    "# Create an output parser using the PydanticOutputParser\n",
     "parser = PydanticOutputParser(pydantic_object=EmailSummary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +407,7 @@
     }
    ],
    "source": [
-    "# Print the instruction.\n",
+    "# Print the instructions.\n",
     "print(parser.get_format_instructions())"
    ]
   },
@@ -411,16 +415,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Defining the prompt:\n",
+    "Let's define a prompt including the following variables:\n",
     "\n",
-    "1. `question`: Receives the user's question.\n",
-    "2. `email_conversation`: Inputs the content of the email conversation.\n",
-    "3. `format`: Specifies the format.\n"
+    "1. ```question```: Receives the user's question.\n",
+    "2. ```email_conversation```: Inputs the content of the email conversation.\n",
+    "3. ```format```: Specifies the format.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +444,7 @@
     ")\n",
     "\n",
     "\n",
-    "# Add partial formatting of PydanticOutputParser to format\n",
+    "# Apply the partial method and fill in the `format` variable in advance\n",
     "prompt = prompt.partial(format=parser.get_format_instructions())"
    ]
   },
@@ -448,16 +452,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, create a Chain."
+    "Next, create a chain."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a chain.\n",
     "chain = prompt | llm"
    ]
   },
@@ -506,12 +509,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, use the parser to parse the results and convert them into an EmailSummary object."
+    "Finally, use the parser to parse the results and convert them into an ```EmailSummary``` object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -523,8 +526,6 @@
     }
    ],
    "source": [
-    "# Parse the results using PydanticOutputParser.\n",
-    "\n",
     "structured_output = parser.parse(output)\n",
     "print(structured_output)"
    ]
@@ -533,24 +534,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create chain with parser\n",
+    "### Creating a Chain Including the ```PydanticOutputParser```\n",
     "\n",
     "You can generate the output as a Pydantic object that you define."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reconstruct the entire chain by adding an output parser.\n",
+    "# Reconstruct the entire chain by adding an output parser\n",
     "chain = prompt | llm | parser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +563,7 @@
     }
    ],
    "source": [
-    "# Execute the chain and print the results.\n",
+    "# Execute the chain and print the results\n",
     "response = chain.invoke(\n",
     "    {\n",
     "        \"email_conversation\": email_conversation,\n",
@@ -570,7 +571,7 @@
     "    }\n",
     ")\n",
     "\n",
-    "# The results are output in the form of an EmailSummary object.\n",
+    "# The results are output in the form of an EmailSummary object\n",
     "print(response)"
    ]
   },
@@ -578,14 +579,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### with_structured_output()"
+    "### ```with_structured_output()```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By using `.with_structured_output(Pydantic)`, you can add an output parser and convert the output into a Pydantic object."
+    "By adding an output parser using ```.with_structured_output(Pydantic)```, you can convert the output into a Pydantic object."
    ]
   },
   {
@@ -601,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +617,7 @@
     }
    ],
    "source": [
-    "# Call the `invoke()` function to print the result.\n",
+    "# Call the `invoke()` method and print the result\n",
     "answer = llm_with_structured.invoke(email_conversation)\n",
     "answer"
    ]
@@ -627,7 +628,7 @@
    "source": [
     "**Note**\n",
     "\n",
-    "One thing to note is that the `.with_structured_output()` function does not support the `stream()` function."
+    "One thing to note is that the ```.with_structured_output()``` method does not support the ```stream()``` method."
    ]
   }
  ],
